--- a/environment.yml
+++ b/environment.yml
@@ -1,51 +1,112 @@
-name: pymdp
+name: pymdp_env
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2020.10.14=0
-  - certifi=2020.11.8=py37hecd8cb5_0
-  - cycler=0.10.0=py37_0
-  - freetype=2.10.4=ha233b18_0
-  - intel-openmp=2019.4=233
-  - jpeg=9b=he5867d9_2
-  - kiwisolver=1.3.0=py37h23ab428_0
-  - lcms2=2.11=h92f6f08_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=3.0.1=h93005f0_2
-  - libpng=1.6.37=ha441bb4_0
-  - libtiff=4.1.0=hcb84e12_1
-  - lz4-c=1.9.2=h79c402e_3
-  - matplotlib=3.3.2=0
-  - matplotlib-base=3.3.2=py37h181983e_0
-  - mkl=2019.4=233
-  - mkl-service=2.3.0=py37h9ed2024_0
-  - mkl_fft=1.2.0=py37hc64f4ea_0
-  - mkl_random=1.1.1=py37h959d312_0
-  - ncurses=6.2=h0a44026_1
-  - numpy=1.19.2=py37h456fd55_0
-  - numpy-base=1.19.2=py37hcfb5961_0
-  - olefile=0.46=py37_0
-  - openssl=1.1.1h=haf1e3a3_0
-  - pandas=1.1.3=py37hb1e8313_0
-  - pillow=8.0.1=py37h5270095_0
-  - pip=20.3=py37hecd8cb5_0
-  - pyparsing=2.4.7=py_0
-  - python=3.7.9=h26836e1_0
+  - appnope=0.1.2=py37hf985489_1
+  - attrs=21.2.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - bzip2=1.0.8=h0d85af4_4
+  - ca-certificates=2021.5.30=h033912b_0
+  - certifi=2021.5.30=py37hf985489_0
+  - cloudpickle=1.6.0=py_0
+  - cycler=0.10.0=py_2
+  - decorator=5.0.9=pyhd8ed1ab_0
+  - et_xmlfile=1.0.1=py_1001
+  - ffmpeg=4.3.1=hb787a4c_2
+  - freetype=2.10.4=h4cff582_1
+  - future=0.18.2=py37hf985489_3
+  - gettext=0.19.8.1=h7937167_1005
+  - gmp=6.2.1=h2e338ed_0
+  - gnutls=3.6.13=h756fd2b_1
+  - gym=0.18.0=py37h85f7c60_1
+  - importlib-metadata=4.2.0=py37hf985489_0
+  - importlib_metadata=4.2.0=hd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - ipykernel=5.5.5=py37h85f7c60_0
+  - ipython=7.23.1=py37h85f7c60_0
+  - ipython_genutils=0.2.0=py_1
+  - jbig=2.1=h0d85af4_2003
+  - jdcal=1.4.1=py_0
+  - jedi=0.18.0=py37hf985489_2
+  - jpeg=9d=hbcb3906_0
+  - jupyter_client=6.1.12=pyhd8ed1ab_0
+  - jupyter_core=4.7.1=py37hf985489_0
+  - kiwisolver=1.3.1=py37h70f7d40_1
+  - lame=3.100=h35c211d_1001
+  - lcms2=2.12=h577c468_0
+  - lerc=2.2.1=h046ec9c_0
+  - libblas=3.9.0=9_openblas
+  - libcblas=3.9.0=9_openblas
+  - libcxx=11.1.0=habf9029_0
+  - libdeflate=1.7=h35c211d_5
+  - libffi=3.3=h046ec9c_2
+  - libgfortran=5.0.0=9_3_0_h6c81a4c_22
+  - libgfortran5=9.3.0=h6c81a4c_22
+  - libiconv=1.16=haf1e3a3_0
+  - liblapack=3.9.0=9_openblas
+  - libopenblas=0.3.15=openmp_h5e1b9a4_1
+  - libpng=1.6.37=h7cec526_2
+  - libsodium=1.0.18=hbcb3906_1
+  - libtiff=4.3.0=h1167814_1
+  - libwebp-base=1.2.0=h0d85af4_2
+  - llvm-openmp=11.1.0=hda6cdc1_1
+  - lz4-c=1.9.3=h046ec9c_0
+  - matplotlib=3.4.2=py37hf985489_0
+  - matplotlib-base=3.4.2=py37hb018525_0
+  - matplotlib-inline=0.1.2=pyhd8ed1ab_2
+  - more-itertools=8.8.0=pyhd8ed1ab_0
+  - ncurses=6.2=h2e338ed_4
+  - nettle=3.6=hedd7734_0
+  - numpy=1.20.3=py37h84c02c4_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openh264=2.1.1=hfd3ada9_0
+  - openjpeg=2.4.0=h6e7aa92_1
+  - openpyxl=3.0.7=pyhd8ed1ab_0
+  - openssl=1.1.1k=h0d85af4_0
+  - packaging=20.9=pyh44b312d_0
+  - pandas=1.2.4=py37hb23ed4d_0
+  - parso=0.8.2=pyhd8ed1ab_0
+  - patsy=0.5.1=py_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.2.0=py37hd4e48bc_1
+  - pip=21.1.2=pyhd8ed1ab_0
+  - pluggy=0.13.1=py37hf985489_4
+  - prompt-toolkit=3.0.18=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - py=1.10.0=pyhd3deb0d_0
+  - pyglet=1.5.16=py37hf985489_0
+  - pygments=2.9.0=pyhd8ed1ab_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pytest=6.2.1=py37hf985489_1
+  - python=3.7.10=h7728216_100_cpython
   - python-dateutil=2.8.1=py_0
-  - pytz=2020.4=pyhd3eb1b0_0
-  - readline=8.0=h1de35cc_0
-  - scipy=1.5.2=py37h912ce22_0
-  - seaborn=0.11.0=py_0
-  - setuptools=50.3.2=py37hecd8cb5_2
-  - six=1.15.0=py37hecd8cb5_0
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - tornado=6.1=py37h9ed2024_0
-  - wheel=0.36.0=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.4.5=h41d2c2f_0
-prefix: /Users/at449/anaconda3/envs/pymdp
+  - python_abi=3.7=1_cp37m
+  - pytz=2021.1=pyhd8ed1ab_0
+  - pyzmq=22.0.3=py37h8f778e5_1
+  - readline=8.1=h05e3726_0
+  - scipy=1.6.3=py37h866764c_0
+  - seaborn=0.11.1=hd8ed1ab_1
+  - seaborn-base=0.11.1=pyhd8ed1ab_1
+  - setuptools=49.6.0=py37hf985489_3
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.35.5=h44b9ce1_0
+  - statsmodels=0.12.2=py37h183f225_0
+  - tk=8.6.10=h0419947_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tornado=6.1=py37hf967b71_1
+  - traitlets=5.0.5=py_0
+  - typing_extensions=3.7.4.3=py_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - wheel=0.36.2=pyhd3deb0d_0
+  - x264=1!161.3030=h35c211d_0
+  - xlsxwriter=1.4.3=pyhd8ed1ab_0
+  - xz=5.2.5=haf1e3a3_1
+  - zeromq=4.3.4=h1c7c35f_0
+  - zipp=3.4.1=pyhd8ed1ab_0
+  - zlib=1.2.11=h7795811_1010
+  - zstd=1.5.0=h582d3a0_0
+prefix: /Users/conor/opt/anaconda3/envs/pymdp_env
